[package]
name = "da-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
jsonrpsee = { version = "0.16.2", features = ["client", "macros"] }
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.51.1", features = ["serde"] }
tendermint = { version = "0.30.0" }
tendermint-rpc = { version = "0.30.0" }
jsonwebtoken = "8.3.0"
dotenv = "0.15.0"
http = "0.2.9"
